--- a/style.css
+++ b/style.css
@@ -42,3 +42,14 @@ h2{
     margin: 10px;
     padding: 15px;
 }
+@media (min-width: 1024px) and (max-width: 1640px) {
+    .clock{
+        margin: 0px 500px 0px 500px;
+    }
+    
+}
+@media (min-width: 760px) and (max-width: 1023px) {
+    .clock{
+        margin: 0px 250px 0px 250px;
+}
+}
